--- a/my_own_collection/roles/single_task_role/meta/main.yml
+++ b/my_own_collection/roles/single_task_role/meta/main.yml
@@ -1,7 +1,8 @@
 galaxy_info:
-  author: your name
+  author: Emil Suleymanov
   description: your role description
-  company: your company (optional)
+  company: netology
+  role_name: single_task_role
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
