--- a/my_own_collection/roles/single_task_role/tasks/main.yml
+++ b/my_own_collection/roles/single_task_role/tasks/main.yml
@@ -1,2 +1,6 @@
 ---
 # tasks file for single_task_role
+- name: my_own_role test
+  my_own_module:
+    path: "{{ path }}"
+    content: "{{ content }}"
